# Deluge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
deluge/: __main__.py
deluge/core/: engine.py  export.py  logger.py  models.py  utils.py
deluge/interface/: cli.py  formatter.py
deluge/parsers/: __init__.py  base.py  nmap_stdout.py  nmap_xml.py  rustscan.py
docs/: index.html
tests/: test_cli_modes.py  test_interactive_fix.py
