[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deluge"
version = "0.2.0"
description = "Advanced parser and formatter for Nmap and RustScan outputs with beautiful terminal UI and multi-format exports"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Deluge Maintainers", email = "maintainers@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
deluge = "deluge.interface.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deluge*"]
